<resources>
    <string name="app_name">SQLiteApp</string>

    <string name="details">Details:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="make_admin">Make Admin</string>
    <string name="clear">Clear</string>
    <string name="add">Add</string>
    <string name="admin">Admin</string>
    <string name="not_Admin">Not Admin</string>
    <string name="list_item"> %s %s \nAge: %d \nID: %d \nStatus: %s </string>
    <string name="check_inputs">Please Check The Inputs</string>
    <string name="ok">OK</string>
    <string name="success">Added Contact</string>

</resources>