
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/svMain"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".MainActivity"
android:background="#efefef">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="100dp"
    app:cardCornerRadius="10dp"
    android:layout_margin="25dp"
    android:padding="15dp"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/txtDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textSize="21sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            />

        <EditText
            android:id="@+id/edtTxtFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtDetails"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/first_name"
            android:inputType="text"
            android:maxLength="20" />

        <EditText
            android:id="@+id/edtTxtLastName"
            android:layout_below="@id/edtTxtFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/last_name"
            android:inputType="text"
            android:maxLength="20"
            />

        <EditText
            android:id="@+id/edtTxtAge"
            android:layout_below="@id/edtTxtLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/age"
            android:inputType="number"
            android:maxLength="2"
            />

        <TextView
            android:id="@+id/txtActivate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtTxtAge"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/make_admin"
            android:textSize="19sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swActivate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtTxtAge"
            android:layout_alignBaseline="@id/txtActivate"
            android:layout_marginStart="25dp"
            android:layout_toEndOf="@id/txtActivate" />


        <RelativeLayout
            android:id="@+id/relButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtActivate"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:backgroundTint="@color/accent"
                android:text="@string/clear" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:layout_toEndOf="@id/btnClear"
                android:backgroundTint="@color/accent"
                android:text="@string/add" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relButtons"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>

</ScrollView>
